--- a/src/Modules/Pages/Components/CkEditor/resources/editor.css
+++ b/src/Modules/Pages/Components/CkEditor/resources/editor.css
@@ -1,13 +1,10 @@
 html, body {
-  display: flex;
-  flex-grow: 1;
-  flex-direction: column;
-  height: 100%;
   margin: 0;
 }
 
 body.loading::before {
   content: '';
+  position:absolute;
   box-sizing: border-box;
   top: 0;
   left: 0;
