--- a/src/Themes/Admin/resources/css/styles.css
+++ b/src/Themes/Admin/resources/css/styles.css
@@ -18,13 +18,13 @@ table.datalist {
 }
 
 table.datalist thead,
-table.datalist tbody tr:nth-child(2) {
+table.datalist tbody tr:nth-child(even) {
   background: #f0f0f0;
 }
 
 table.datalist th,
 table.datalist td {
-  padding: 5px 10px;
+  padding: 14px 10px;
 }
 
 
