--- a/src/Themes/Admin/resources/css/styles.css
+++ b/src/Themes/Admin/resources/css/styles.css
@@ -15,6 +15,8 @@ body {
 }
 
 header {
+  position: sticky;
+  top: 0;
   display: flex;
   align-items: center;
   height: var(--drawer-top-offset);
