--- a/src/Base/Components/CkEditor/resources/ckeditor.css
+++ b/src/Base/Components/CkEditor/resources/ckeditor.css
@@ -1,7 +1,18 @@
-iframe.content-editor {
+.content-editor {
   box-sizing: border-box;
   display: block;
   width: 100%;
   border: none;
-  height: 0;
+}
+
+.content-editor.ck.ck-editor__editable_inline {
+  border: none;
+  padding: 0;
+}
+
+.content-editor.ck.ck-editor__editable_inline > :last-child {
+}
+
+.content-editor.ck.ck-editor__editable_inline > :first-child {
+  margin-top: 0;
 }
