--- a/src/Themes/Admin/_resources/css/styles.css
+++ b/src/Themes/Admin/_resources/css/styles.css
@@ -22,6 +22,7 @@ header {
   height: var(--drawer-top-offset);
   background: var(--dark-blue-color);
   color: #f3f3f3;
+  z-index: 1;
 }
 
 .drawer-app-content {
