--- a/src/Themes/Admin/AdminTheme.phtml
+++ b/src/Themes/Admin/AdminTheme.phtml
@@ -1,8 +1,9 @@
 <?php
 /**
- * @var $this \Cubex\Quantum\Themes\Admin\AdminTheme
+ * @var $this AdminTheme
  */
 
+use Cubex\Quantum\Themes\Admin\AdminTheme;
 use Packaged\Dispatch\Dispatch as Dispatch;
 use Packaged\Dispatch\ResourceStore as ResourceStore;
 
