--- a/src/Themes/ErrorTheme/ErrorTheme.phtml
+++ b/src/Themes/ErrorTheme/ErrorTheme.phtml
@@ -1,8 +1,9 @@
 <?php
 /**
- * @var $this \Cubex\Quantum\Themes\ErrorTheme\ErrorTheme
+ * @var $this ErrorTheme
  */
 
+use Cubex\Quantum\Themes\ErrorTheme\ErrorTheme;
 use Packaged\Dispatch\Dispatch;
 use Packaged\Dispatch\ResourceStore;
 
