--- a/src/Themes/NoTheme/NoTheme.phtml
+++ b/src/Themes/NoTheme/NoTheme.phtml
@@ -1,8 +1,9 @@
 <?php
 /**
- * @var $this \Cubex\Quantum\Themes\NoTheme\NoTheme
+ * @var $this NoTheme
  */
 
+use Cubex\Quantum\Themes\NoTheme\NoTheme;
 use Packaged\Dispatch\Dispatch;
 use Packaged\Dispatch\ResourceStore;
 
