--- a/src/Themes/Quantifi/QuantifiTheme.phtml
+++ b/src/Themes/Quantifi/QuantifiTheme.phtml
@@ -1,8 +1,9 @@
 <?php
 /**
- * @var $this \Cubex\Quantum\Themes\Quantifi\QuantifiTheme
+ * @var $this QuantifiTheme
  */
 
+use Cubex\Quantum\Themes\Quantifi\QuantifiTheme;
 use Packaged\Dispatch\Dispatch;
 use Packaged\Dispatch\ResourceStore;
 
